Fix compile issues from backport